--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.13",
+    "datatables.net": "^2.3.4",
+    "datatables.net-dt": "^2.3.4",
     "formik": "^2.4.6",
     "heroicon": "^0.0.2",
+    "jquery": "^3.7.1",
     "react": "^19.1.1",
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.0",
     "router": "^2.2.0",
     "uuid": "^13.0.0",
     "yup": "^1.7.0"
@@ -26,6 +31,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@tailwindcss/cli": "^4.1.13",
+    "@types/jquery": "^3.5.33",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
