--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "jquery": "^3.7.1",
     "react": "^19.1.1",
     "react-bootstrap-icons": "^1.11.6",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
-    "react-router-dom": "^7.8.2",
+    "react-router-dom": "^7.9.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.2.0",
     "router": "^2.2.0",
     "uuid": "^13.0.0",
@@ -34,6 +36,7 @@
     "@types/jquery": "^3.5.33",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
